code done on 11-5-2020

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!--Account? Y or N-->
 
 <form>
-    <label for= "bankAcct">Do you have a KC Piggy Bank account?</label>
+    <label for= "bankAcct">Do you have a KC Piggy Bank ATM account?</label>
         <a class="btn btn-primary" onclick="pathToGetAcct()" role="button">Yes</a>  
         <!--<a class="btn btn-primary" onclick="createAcct()" role="button">No</a> -->
         <a class="btn btn-primary" onclick="pathToCreateAcct()" role="button">No</a>
