--- a/changePin.html
+++ b/changePin.html
@@ -5,25 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link href="getAcct.css" rel="stylesheet">
-    <title>Create new account</title>
+    <title>Change Pin</title>
 </head>
 <body>
 
     <section>
-        <h1>Well, what are you waiting for?! Let's get your account created today!</h1>
+        <h1>Change Pin Number</h1>
     <form>
-        <label for= "pinNum">Input a pin number to create your account:</label>
+        <label for= "pinNum">Please input your NEW pin number:</label>
         <input id="pinput"></input>
-        <a class="btn btn-primary" onclick="createAcct()" role="button">Submit</a>  
+        <a class="btn btn-primary" onclick="changePin()" role="button">Submit</a>  
         <p id="account"></p> 
     </form>
     </section>
 
-
-
-
 <section>
     <div>
+        <p>What would you like to do next? Click an option below.</p>
         <button type="button" class="btn btn-primary" id="btn1" onclick="pathToDeposit()">Deposit</button> 
 <button type="button" class="btn btn-primary" id="btn1" onclick="pathToWithdrawal()">Withdrawal</button> 
 <button type="button" class="btn btn-primary" id="btn1" onclick="pathToGetAcct()">Balance Inquiry</button> 
@@ -32,8 +30,9 @@
 <button type="button" class="btn btn-primary" id="btn1" onclick="pathToHome()">Home</button> 
     </div>
 </section>
-    
-<script type="text/javascript" src="createAcct.js"></script>
+
+
+<script type="text/javascript" src="changePin.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
