--- a/deposit.html
+++ b/deposit.html
@@ -5,36 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link href="getAcct.css" rel="stylesheet">
-    <title>Balance Inquiry</title>
+    <title>Deposit</title>
 </head>
 <body>
-    
+
 <section>
-    <h1>Balance Inquiry</h1>
+    <h1>Deposit</h1>
 <form>
-    <label for= "pinNum">Please enter your pin number:</label>
+    <label for= "pinNum">Deposit amount:</label>
     <input id="pinput"></input>
-    <a class="btn btn-primary" onclick="getAcct()" role="button">Submit</a>  
+    <a class="btn btn-primary" onclick="deposit()" role="button">Submit</a>  
     <p id="account"></p> 
 </form>
 </section>
 
-<section>
-    <div>
-        <p>What would you like to do next? Click an option below.</p>
-<button type="button" class="btn btn-primary" id="btn1" onclick="pathToDeposit()">Deposit</button> 
+
+    <button type="button" class="btn btn-primary" id="btn1" onclick="pathToDeposit()">Deposit</button> 
 <button type="button" class="btn btn-primary" id="btn1" onclick="pathToWithdrawal()">Withdrawal</button> 
 <button type="button" class="btn btn-primary" id="btn1" onclick="pathToGetAcct()">Balance Inquiry</button> 
 <button type="button" class="btn btn-primary" id="btn1" onclick="pathToChangePin()">Change Pin</button> 
 <button type="button" class="btn btn-primary" id="btn1" onclick="pathToCreateAcct()">Create New Account</button> 
 <button type="button" class="btn btn-primary" id="btn1" onclick="pathToHome()">Home</button> 
-    </div>
-</section>
+    
 
-
-
-<script type="text/javascript" src="atm.js"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="deposit.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 </html>
